--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 
     // 4. Extent Reports
     implementation 'com.aventstack:extentreports:5.1.2'
+    implementation 'commons-io:commons-io:2.14.0'
 }
 
 test {
