--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,8 @@ dependencies {
 
     // 4. Extent Reports
     implementation 'com.aventstack:extentreports:5.1.2'
-    //5. IO Library
+
+    //5. IO dependency Library
     implementation 'commons-io:commons-io:2.14.0'
 }
 
